# edgar

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Makefile.am  README  README.md  TODO  configure.ac
cmake/: Findgmp.cmake
examples/: Makefile.am  abs.edgar  abs.lisp  factorial.edgar  factorial.lisp  fibonacci.edgar  fibonacci.lisp  gauss.edgar  gauss.lisp  gcd.lisp  lcm.lisp  list-member.edgar  list-member.lisp  print.lisp  pythagoras.lisp
include/: apply.h  builtin.h  config.h.in  const.h  env.h  eval.h  fileio.h  number.h  obj.h  parser.h  prelude.h  repl.h  scanner.h
lib/: Makefile.am  edgar.lisp
man/: Makefile.am  edgar.1
src/: Makefile.am  apply.c  apply.h  builtin.c  builtin.h  const.h  env.c  env.h  eval.c  eval.h  fileio.c  fileio.h  func_atom.c  func_atom.h  func_car.c  func_car.h  func_cdr.c  func_cdr.h  func_cond.c  func_cond.h  func_cons.c  func_cons.h  func_equal.c  func_equal.h  func_greater.c  func_greater.h  func_int.c  func_int.h  func_length.c  func_length.h  func_less.c  func_less.h  func_minus.c  func_minus.h  func_null.c  func_null.h  func_plus.c  func_plus.h  func_quotient.c  func_quotient.h  (+20 more)
tests/: Makefile.am  atom.ex  atom.in  atom.sh  car.ex  car.in  car.sh  cdr.ex  cdr.in  cdr.sh  cond.ex  cond.in  cond.sh  cons.ex  cons.in  cons.sh  cppcheck.sh  defun.ex  defun.in  defun.sh  equal.ex  equal.in  equal.sh  float.ex  float.in  float.sh  greater.ex  greater.in  greater.sh  if.in  if.sh  int.ex  int.in  int.sh  length.ex  length.in  length.sh  less.ex  less.in  less.sh  (+49 more)
