# edgar - a small LISP Interpreter written in C
# Copyright (c) 2013 Thomas Cort <linuxgeek@gmail.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

bin_PROGRAMS = edgar

edgar_SOURCES = \
	apply.c			apply.h			\
				const.h			\
	env.c			env.h			\
	eval.c			eval.h			\
	fileio.c		fileio.h		\
	func_atom.c		func_atom.h		\
	func_car.c		func_car.h		\
	func_cdr.c		func_cdr.h		\
	func_cond.c		func_cond.h		\
	func_cons.c		func_cons.h		\
	func_equal.c		func_equal.h		\
	func_greater.c		func_greater.h		\
	func_int.c		func_int.h		\
	func_less.c		func_less.h		\
	func_minus.c		func_minus.h		\
	func_null.c		func_null.h		\
	func_plus.c		func_plus.h		\
	func_quotient.c		func_quotient.h		\
	func_remainder.c	func_remainder.h	\
	func_sqrt.c		func_sqrt.h		\
	func_times.c		func_times.h		\
	main.c						\
	number.c		number.h		\
	obj.c			obj.h			\
	parser.c		parser.h		\
	repl.c			repl.h			\
	scanner.c 		scanner.h
